@@ -64,7 +64,7 @@ LIBDAR_VERSION_OUT=$(LIBDAR_MAJOR).$(LIBDAR_MEDIUM).$(LIBDAR_MINOR)
 
 # header files required by external applications and that must be installed (make install)
 
-dist_noinst_DATA = libdar.hpp path.hpp mask.hpp integers.hpp real_infinint.hpp statistics.hpp user_interaction.hpp user_interaction5.hpp user_interaction_callback.hpp user_interaction_callback5.hpp user_interaction_blind.hpp erreurs.hpp deci.hpp limitint.hpp infinint.hpp compression.hpp generic_file.hpp contextual.hpp wrapperlib.hpp storage.hpp tuyau.hpp tools.hpp catalogue.hpp cat_entree.hpp cat_nomme.hpp cat_directory.hpp cat_inode.hpp scrambler.hpp archive.hpp archive5.hpp header_version.hpp ea.hpp crypto.hpp int_tools.hpp thread_cancellation.hpp tronconneuse.hpp mask_list.hpp database.hpp database5.hpp data_tree.hpp criterium.hpp crit_action.hpp trontextual.hpp archive_options.hpp user_group_bases.hpp database_options.hpp label.hpp tlv_list.hpp tlv.hpp memory_file.hpp pile.hpp archive_version.hpp mem_ui.hpp fichier_global.hpp fichier_local.hpp erreurs_ext.hpp secu_string.hpp crc.hpp hash_fichier.hpp escape.hpp escape_catalogue.hpp compile_time_features.hpp nls_swap.hpp entrepot.hpp entrepot_local.hpp etage.hpp list_entry.hpp fsa_family.hpp capabilities.hpp datetime.hpp crypto_asym.hpp generic_file_overlay_for_gpgme.hpp secu_memory_file.hpp crypto_sym.hpp filesystem_specific_attribute.hpp range.hpp pile_descriptor.hpp slice_layout.hpp cygwin_adapt.h cygwin_adapt.hpp cat_tools.hpp cat_delta_signature.hpp smart_pointer.hpp entrepot_libcurl.hpp entrepot_libcurl5.hpp mycurl_easyhandle_sharing.hpp mycurl_protocol.hpp mycurl_shared_handle.hpp mycurl_easyhandle_node.hpp memory_check.hpp libdar5.hpp catalogue_listing_callback.hpp get_version.hpp database_archives.hpp database_aux.hpp database_listing_callback.hpp shell_interaction.hpp archive_summary.hpp entree_stats.hpp
+dist_noinst_DATA = libdar.hpp path.hpp mask.hpp integers.hpp real_infinint.hpp statistics.hpp user_interaction.hpp user_interaction5.hpp user_interaction_callback.hpp user_interaction_callback5.hpp user_interaction_blind.hpp erreurs.hpp deci.hpp limitint.hpp infinint.hpp compression.hpp generic_file.hpp contextual.hpp wrapperlib.hpp storage.hpp tuyau.hpp tools.hpp catalogue.hpp cat_entree.hpp cat_nomme.hpp cat_directory.hpp cat_inode.hpp scrambler.hpp archive.hpp archive5.hpp header_version.hpp ea.hpp crypto.hpp int_tools.hpp thread_cancellation.hpp tronconneuse.hpp mask_list.hpp database.hpp database5.hpp data_tree.hpp criterium.hpp crit_action.hpp trontextual.hpp archive_options.hpp user_group_bases.hpp database_options.hpp label.hpp tlv_list.hpp tlv.hpp memory_file.hpp pile.hpp archive_version.hpp mem_ui.hpp fichier_global.hpp fichier_local.hpp erreurs_ext.hpp secu_string.hpp crc.hpp hash_fichier.hpp escape.hpp escape_catalogue.hpp compile_time_features.hpp nls_swap.hpp entrepot.hpp entrepot_local.hpp etage.hpp list_entry.hpp fsa_family.hpp capabilities.hpp datetime.hpp crypto_asym.hpp generic_file_overlay_for_gpgme.hpp secu_memory_file.hpp crypto_sym.hpp filesystem_specific_attribute.hpp range.hpp pile_descriptor.hpp slice_layout.hpp cygwin_adapt.h cygwin_adapt.hpp cat_tools.hpp cat_delta_signature.hpp smart_pointer.hpp entrepot_libcurl.hpp entrepot_libcurl5.hpp mycurl_easyhandle_sharing.hpp mycurl_protocol.hpp mycurl_shared_handle.hpp mycurl_easyhandle_node.hpp memory_check.hpp libdar5.hpp catalogue_listing_callback.hpp get_version.hpp database_archives.hpp database_aux.hpp database_listing_callback.hpp shell_interaction.hpp archive_summary.hpp entree_stats.hpp archive_aux.hpp
 
 install-data-local:
 	mkdir -p $(DESTDIR)$(pkgincludedir)
